--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "types": "./dist/index.d.ts",
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "@metabohub/viz-core": "^0.0.27",
     "roboto-fontface": "*",
     "vue": "^3.4.15",
     "vuetify": "^3.5.2",
