--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "types": "./dist/index.d.ts",
   "dependencies": {
+    "dagrejs":"^0.2.1",
     "@mdi/font": "^7.4.47",
     "@metabohub/viz-core": "^0.0.27",
     "roboto-fontface": "*",
