import viz and testing function

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mdi/font": "^7.4.47",
     "@metabohub/viz-core": "file:metabohub-viz-core-0.0.2.tgz",
     "dagrejs": "^0.2.1",
+    "@viz-js/viz":"^3.4.0",
     "roboto-fontface": "*",
     "vue": "^3.4.15",
     "vuetify": "^3.5.2",
