--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^9.21.1",
+    "graph-data-structure":"^3.5.0",
     "jsdom": "^24.0.0",
     "prettier": "^3.2.4",
     "start-server-and-test": "^2.0.3",
