--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "dependencies": {
     "@mdi/font": "^7.4.47",
     "@metabohub/viz-context-menu": "^0.0.2",
-    "@metabohub/viz-core": "file:metabohub-viz-core-0.0.2.tgz",
+    "@metabohub/viz-core": "^0.1.8",
     "roboto-fontface": "*",
     "vue": "^3.4.15",
     "vuetify": "^3.5.2",
