install line-intersect package

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mdi/font": "^7.4.47",
     "@metabohub/viz-context-menu": "^0.0.2",
     "@metabohub/viz-core": "file:metabohub-viz-core-0.0.2.tgz",
+    "line-intersect": "^3.0.0",
     "roboto-fontface": "*",
     "vue": "^3.4.15",
     "vuetify": "^3.5.2",
@@ -62,7 +63,7 @@
     "eslint": "^8.56.0",
     "eslint-plugin-storybook": "^0.8.0",
     "eslint-plugin-vue": "^9.21.1",
-    "graph-data-structure":"^3.5.0",
+    "graph-data-structure": "^3.5.0",
     "jsdom": "^24.0.0",
     "prettier": "^3.2.4",
     "start-server-and-test": "^2.0.3",
