--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@mdi/font": "^7.4.47",
     "@metabohub/viz-context-menu": "^0.0.2",
     "@metabohub/viz-core": "file:metabohub-viz-core-0.0.2_juin2.tgz",
+    "cytoscape": "^3.30.2",
     "line-intersect": "^3.0.0",
     "roboto-fontface": "*",
     "vue": "^3.4.15",
@@ -61,6 +62,8 @@
     "@vue/test-utils": "^2.4.4",
     "@vue/tsconfig": "^0.5.1",
     "cypress": "^13.6.4",
+    "cytoscape": "^3.30.2",
+    "cytoscape-fcose": "^2.2.0",
     "dagrejs": "^0.2.1",
     "eslint": "^8.56.0",
     "eslint-plugin-storybook": "^0.8.0",
